--- a/230403/tableEx.html
+++ b/230403/tableEx.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>테이블 스타일 연습 2</title>
+  <title>table 연습 4</title>
   <style>
     body {
       text-align: center;
@@ -16,9 +16,6 @@
       border-collapse: collapse;
       border: 1px solid #222 ;
     }
-    tbody {
-
-    }
     table tr td {
       border: 1px solid #222;
       padding: 15px 25px;
@@ -30,21 +27,19 @@
   </style>
 </head>
 <body>
-  <h1>테이블 스타일 연습 2</h1>
+  <h1>table 연습 4</h1>
   <table>
-    <tbody>
     <caption>소</caption>
+    <tbody>
     <tr><!--1행-->
       <td>소머리</td>
       <td>목심</td>
-      <td>등심
-        <br>(살치살<a href="#"> · 꽃등심</a>)
-      </td>
+      <td>등심<br>(살치살 · <a href="#">꽃등심</a>)</td>
       <td>채끝살</td>
       <td>우둔<br>(홍두깨살)</td>
     </tr>
     <tr><!--2행-->
-      <th rowspan="4"><p></p></th>
+      <th rowspan="4"></th>
       <td rowspan="2">앞다리살<br>(부채살)</td>
       <td>갈비<br>(안창살 · 제비추리)</td>
       <td>안심</td>
