--- a/230406-layout/positionEx5.html
+++ b/230406-layout/positionEx5.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>	position </title>
     <link rel="stylesheet" href="../common/minireset.min.css">
-    <link rel="stylesheet" href="position.css">
+    <link rel="stylesheet" href="positionEx5.css">
 </head>
 <body>
     <header>
