--- a/230412-layout/background.html
+++ b/230412-layout/background.html
@@ -19,30 +19,24 @@ input {
     margin: 15px;
     box-sizing: border-box;
     background-color: #FCC8D1;
+    background-repeat: no-repeat;
+    background-size: 40px;
+    background-position: 20px 50%;
 }
 input:focus {
     background-color: #D14D72;
 }
 #Name {
     background-image: url(./images/free-icon-user-5309035.png);
-    background-repeat: no-repeat;
-    background-size: 40px;
-    background-position: 20px 50%;
-    margin:60px 120px 0 120px;
+    margin:60px 120px 0 ;
 }
 #email {
     background-image: url(./images/free-icon-email-747314.png);
-    background-repeat: no-repeat;
-    background-size: 40px;
-    background-position: 20px 50%;
-    margin: 15px 120px 0 120px;
+    margin: 15px 120px 0 ;
 }
 #number {
     background-image: url(./images/free-icon-smartphone-call-15874.png);
-    background-repeat: no-repeat;
-    background-size: 40px;
-    background-position: 20px 50%;
-    margin: 15px 120px 0 120px;
+    margin: 15px 120px 0;
 }
     </style>
 </head>
