--- a/230410-layout/layoutEx1.html
+++ b/230410-layout/layoutEx1.html
@@ -44,14 +44,14 @@
   <h1>2열 레이아웃</h1>
   <div class="header">
   <h2>본문</h2>
-    <p>내는 품으며, 얼마나 석가는 청춘 창공에 끓는 용기가 것이다.보라, 위하여서. 천고에 청춘에서만 얼음이 얼마나 거선의 끓는다. 보는 그들은 뛰노는 같으며, 가치를 수 커다란 것이다. 보는 붙잡아 영원히 이상의 이상이 위하여 천고에 그들의 귀는 이것이다. 능히 웅대한 것이다.보라, 것이다. 보내는 못하다 심장은 밥을 우리 청춘의 쓸쓸하랴?
+    <p>내는 품으며, 얼마나 석가는 청춘 창공에 끓는 용기가 것이다.보라, 위하여서. 천고에 청춘에서만 얼음이 얼마나 거선의 끓는다. 보는 그들은 뛰노는 같으며, 가치를 수 커다란 것이다. 보는 붙잡아 영원히 이상의 이상이 위하여 천고에 그들의 귀는 이것이다. 능히 웅대한 것이다.
     </p>
    <p>붙잡아 천지는 기쁘며, 얼마나 못할 아니다. 것이 풍부하게 노래하며 얼마나 위하여서 무엇을 이상 하여도 그것은 때문이다. 찬미를 쓸쓸한 그들을 운다. 끓는 사랑의 동산에는 무엇을 봄바람이다. 피어나기 안고, 두손을 석가는 피가 청춘의 작고 방황하였으며, 사막이다. 뜨고, 물방아 이상의 낙원을 인생을 속잎나고, 투명하되 두손을 같이, 쓸쓸하랴?</p>
   </div>
   <div class="side">
     <h2>사이드 바</h2>
     <ul>
-    <li>주며, 있으며, 실현에 힘있다. 싶이 사랑의 노래하며 뛰노는 그것은 있다. 두기 안고, 유소년에게서 남는 낙원을 놀이 대한 것이다.보라, 같이, 부패뿐이다. 우리의 돋고, 위하여 품에 열매를 기관과 약동하다. 실현에 싹이 긴지라 것이다</li>
+    <li>주며, 있으며, 실현에 힘있다. 싶이 사랑의 노래하며 뛰노는 그것은 있다. 두기 안고, 유소년에게서 남는 낙원을 놀이 대한 것이다.보라, 같이, 부패뿐이다. </li>
     </ul>
   </div>
   <div class="footer">
