--- a/230524_mobileWeb/index.html
+++ b/230524_mobileWeb/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>title</title>
+  <title>web</title>
   <!-- 모바일 우선 -->
   <link rel="stylesheet" href="../common/reset.css">
   <link rel="stylesheet" href="./mqEx6.css">
