--- a/230524_mobileWeb/index.html
+++ b/230524_mobileWeb/index.html
@@ -28,15 +28,16 @@
 
   <main>
     <div class="container">
-      <svg width="45" height="45" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 3A2.5 2.5 0 0 0 3 5.5v13A2.5 2.5 0 0 0 5.5 21h13a2.5 2.5 0 0 0 2.5-2.5v-13A2.5 2.5 0 0 0 18.5 3h-13Zm11.03 8.72a.75.75 0 0 1 .073.977l-.073.084-4 4a.75.75 0 0 1-.977.073l-.084-.072-4-4.002a.75.75 0 0 1 .976-1.133l.085.073 2.72 2.722V7.75a.75.75 0 0 1 .648-.743L12 7a.75.75 0 0 1 .743.648l.007.102v6.69l2.72-2.72a.75.75 0 0 1 .976-.072l.084.072Z" fill="rgba(0,0,0,0.5)"/></svg>
-      <div class="txt-box">
+     <a href="#"><svg width="45" height="45" fill="none" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 3A2.5 2.5 0 0 0 3 5.5v13A2.5 2.5 0 0 0 5.5 21h13a2.5 2.5 0 0 0 2.5-2.5v-13A2.5 2.5 0 0 0 18.5 3h-13Zm11.03 8.72a.75.75 0 0 1 .073.977l-.073.084-4 4a.75.75 0 0 1-.977.073l-.084-.072-4-4.002a.75.75 0 0 1 .976-1.133l.085.073 2.72 2.722V7.75a.75.75 0 0 1 .648-.743L12 7a.75.75 0 0 1 .743.648l.007.102v6.69l2.72-2.72a.75.75 0 0 1 .976-.072l.084.072Z" fill="rgba(0,0,0,0.5)"/></svg>
+     </a>
+     <div class="txt-box">
         <h2>better creative</h2>
         <h1>Art Direction
           <br>Branding
           <br>Web Design
         </h1>
       </div>
-      <img src="./images/circle-play-solid.svg" alt="play" class="play">
+     <a href="#"><img src="./images/circle-play-solid.svg" alt="play" class="play"></a> 
       <img src="./images/hero-1.png" alt="headset " class="headset">
       <ul>
         <li>01</li>
